# ndinterp

./: Cargo.toml  README.md
ndinterp/: Cargo.toml
ndinterp/examples/: alphas.rs  pdf.rs
ndinterp/examples/lhapdf/: Makefile  lhacheck.cpp
ndinterp/src/: grid.rs  interpolate.rs  lib.rs  metric.rs  scatter.rs
ndinterp/src/grid/: cubic.rs
ndinterp/src/scatter/: commons.rs  invdist.rs  knn.rs  utils.rs
ndinterp_capi/: Cargo.toml  README.md  cbindgen.toml
ndinterp_capi/benches/: Makefile  lhacheck.cpp
ndinterp_capi/example_lhapdf/: Makefile  lhacheck.cpp
ndinterp_capi/src/: lib.rs
ndinterp_py/: Cargo.toml  pyproject.toml
ndinterp_py/src/: lib.rs  scatter.rs
src/: lib.rs  scatter.rs
src/scatter/: knn.rs
