[package]
name = "ndinterp"
version = "0.0.1"
authors = ["Alessandro Candido <alessandro.candido@sns.it>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/AleCandido/ndinterp"
readme = "README.md"
categories = ["science"]
description = "N-dimensional interpolation library"

[dependencies]
ndarray = "0.15.4"
ndarray-linalg = "0.14.1"
petgraph = "0.6.2"
thiserror = "1.0.40"
itertools = "0.11.0"
