[package]
name = "ndinterp"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme = "README.md"
description = "N-dimensional interpolation library"
keywords = ["math", "science"]

[dependencies]
ndarray = "0.15.4"
ndarray-linalg = "0.14.1"
petgraph = "0.6.2"
thiserror = "1.0.40"
itertools = "0.11.0"
